# da-proof-rs

./: .gitignore  Cargo.toml  README.md  gf16.ipynb
codegen/: generate_gf16_lut.rs
src/: bisetmap.rs  common.rs  data_square.rs  error.rs  gf16.rs  gf16_lut.rs  lib.rs  util.rs
src/reed_solomon/: generator.rs  mod.rs
