[package]
name = "da-proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
num = "0.4.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bin]]
name = "generate_gf16_lut"
path = "codegen/generate_gf16_lut.rs"
